.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:54:48 **** Incremental Build of configuration Debug for project Namespaces ****
make all 
Building file: ../src/Cat.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Cat.d" -MT"src/Cat.o" -o "src/Cat.o" "../src/Cat.cpp"
Finished building: ../src/Cat.cpp
 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: Namespaces
Invoking: MacOS X C++ Linker
g++  -o "Namespaces"  ./src/Cat.o ./src/Main.o   
Finished building target: Namespaces
 
14:55:14 **** Incremental Build of configuration Debug for project Namespaces ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:6:10: error: 'Cat.h' file not found with <angled> include; use "quotes" instead
#include <Cat.h>
         ^~~~~~~
         "Cat.h"
../src/Main.cpp:11:6: error: reference to non-static member function must be called; did you mean to call it with no arguments?
        cat.speak;
        ~~~~^~~~~
                 ()
2 errors generated.
make: *** [src/Main.o] Error 1
14:55:24 **** Incremental Build of configuration Debug for project Namespaces ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:6:10: error: 'Cat.h' file not found with <angled> include; use "quotes" instead
#include <Cat.h>
         ^~~~~~~
         "Cat.h"
1 error generated.
make: *** [src/Main.o] Error 1
14:55:34 **** Incremental Build of configuration Debug for project Namespaces ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: Namespaces
Invoking: MacOS X C++ Linker
g++  -o "Namespaces"  ./src/Cat.o ./src/Main.o   
Finished building target: Namespaces
 
14:55:43 **** Incremental Build of configuration Debug for project Namespaces ****
make all 
make: Nothing to be done for `all'.
14:55:44 **** Incremental Build of configuration Debug for project Namespaces ****
make all 
make: Nothing to be done for `all'.
